Fix footer spacing on mobile

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -1,6 +1,8 @@
 .footer {
+  display: grid;
   position: fixed;
   bottom: 0;
+  grid-template-columns: repeat(3, 1fr);
   background-color: var(--card-sectionning-background-color);
   padding: 0.25rem 1rem;
   width: 100%;
